# practice-repo-microsoft-machine-learning-beginners

./: .gitignore  .python-version  .style.yapf  LICENSE  README.md  requirements.in  requirements.txt  rustfmt.toml
.cargo/: config.toml
ch02-regression/: .kateproject  Cargo.toml  Makefile
ch02-regression/notebooks/: l1-using-tools.ipynb  l2-prepare-data.ipynb  l3-linear-regression.ipynb  notebook.ipynb  run_regression.py
ch02-regression/public/: styles.css
ch02-regression/src/: main.rs
ch02-regression/src/lessons/: index.rs  l2_prepare_data.rs  l3_linear_regression.rs  mod.rs  partials.rs  routes.rs
