[package]
name = "ch02-regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "linear_regression"
path = "src/library/lib.rs"

[dependencies]
mimalloc = { version = "~0.1.37" }
csv = { version = "~1.2.2" }
polars = { version = "~0.30.0", features = [
  "lazy",
  "sql",
  "describe",
  "ndarray",
  "random",
  "temporal",
  "timezones",
  "dtype-decimal",
  "horizontal_concat",
  "concat_str",
  "fmt",
] }
ndarray = { version = "~0.15.6" }
linfa = { version = "~0.6.1" }
linfa-linear = { version = "~0.6.1" }
linfa-linalg = { version = "~0.1.0" }
smartcore = { version = "~0.3.2", features = ["ndarray-bindings"] }
plotly = { version = "~0.8.3", features = ["kaleido", "plotly_ndarray"] }
tokio = { version = "~1.28.2", features = ["full"] }
actix-web = { version = "~4.3.1" }
actix-rt = { version = "~2.8.0" }
actix-files = { version = "~0.6.2" }
maud = { version = "~0.25.0", features = ["actix-web"] }

[profile.dev]
opt-level = 0
#codegen-units = 1
