[package]
name = "ch02-regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "linear_regression"
path = "src/library/lib.rs"

[dependencies]
mimalloc = { version = "~0.1.37" }
csv = { version = "~1.2.2" }
polars = { version = "~0.32.1", features = [
  "lazy",
  "sql",
  "describe",
  "ndarray",
  "random",
  "temporal",
  "timezones",
  "dtype-decimal",
  "horizontal_concat",
  "concat_str",
  "fmt",
] }
ndarray = { version = "~0.15.6" }
linfa = { version = "~0.6.1" }
linfa-linear = { version = "~0.6.1" }
linfa-linalg = { version = "~0.1.0" }
smartcore = { version = "~0.3.2", features = ["ndarray-bindings"] }
plotly = { version = "~0.8.3", features = ["kaleido", "plotly_ndarray"] }
tokio = { version = "~1.28.2", features = ["full"] }
maud = { version = "~0.25.0", features = ["axum"] }
axum = { version = "~0.6.20" }
tower = { version = "~0.4.13", features = ["util"] }
tower-http = { version = "~0.4.3", features = ["fs"] }
serde_json = { version = "~1.0.105" }
hyper = { version = "~0.14.27" }


[profile.dev]
opt-level = 0
#codegen-units = 1
